# lunch-order

./: Cargo.toml  README.md
migrations/2019-03-28-181318_add_restaurant_table/: up.sql
migrations/2019-03-29-174159_last_visited_time/: down.sql  up.sql
migrations/2019-03-31-202943_add_user/: down.sql  up.sql
migrations/2019-03-31-234501_user_email_instead_of_name/: down.sql  up.sql
migrations/2019-04-01-001646_email_to_username/: down.sql  up.sql
migrations/2019-04-09-011121_unique_usernames/: down.sql  up.sql
src/: main.rs  model.rs  schema.rs
static/: style.css
templates/: add.html  base.html  index.html  login.html  register.html
