[package]
name = "lunch-order"
version = "0.1.0"
authors = ["Ben Bariteau <\"ben.bariteau@gmail.com\">"]
edition = "2018"

[dependencies]
askama = { version = "^0.8.0", features = ["with-iron"] }
bcrypt = "0.4.0"
chrono = "^0.4.6"
diesel = { version = "^1.4.0", features = ["sqlite"] }
error-chain = "^0.12.0"
env_logger = "^0.6.1"
iron = "^0.6.0"
logger = "^0.4.0"
mount = "^0.4.0"
router = "^0.6.0"
serde = { version = "^1.0.89", features = ["derive"] }
serde_urlencoded = "^0.5.4"
staticfile = "^0.5.0"
